# main-code

./: .gitattributes  .gitignore  README.md  shell.nix
camera/: Cargo.nix  Cargo.toml  Cross.toml  flake.nix  launch  launch.bat  runit
camera/docker/: Dockerfile.aarch64
camera/src/: Camera 0.yaml  _main.txt  get_info_cam.rs  info_cam.txt  main copy 2.rs  main copy 3.rs  main copy.rs  main.rs  old_main.rs
lidar-analyzer/: Cargo.nix  Cargo.toml  flake.nix  launch  result-bin
lidar-analyzer/src/: analyze.rs  analyze_tests_data.rs  basic_viewport.rs  complex_viewport.rs  lidar_analyzer.rs  log_manager.rs  main.rs  parse.rs  prelude.rs  units.rs
motors/: Cargo.toml
motors/src/: main.rs  motors.rs
strategies/: Cargo.toml
strategies/src/: consts.rs  main.rs  test1.rs  vector2.rs
