[package]
name = "lidar-analyzer"
version = "0.2.0"
edition = "2024"

[dependencies]
radians = "0.3.1"
rerun = { version = "0.23.4", features = ["image", "sdk"], default-features = false }
rppal = "0.22.1"
tracing = "0.1.41"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.test]
inherits = "release"
